# rdma_example_verbs

./: CMakeCache.txt  CMakeLists.txt  Makefile  \  client  cmake_install.cmake  main_client.c  main_server.c  rdma_buffer.c  rdma_buffer.d  rdma_buffer.h  rdma_client.c  rdma_client.d  rdma_client.h  rdma_common.h  rdma_server  rdma_server.c  rdma_server.d  rdma_server.h  server  your_executable_name
